<resources>
    <string name="app_name">MovieQuotes</string>
    <string name="action_settings">Settings</string>
    <string name="defaultQuote">Quote</string>
    <string name="defaultMovie">Movie</string>
    <string name="dialogTitleAdd">"Add a Quote"</string>
    <string name="dialogTitleEdit">"Edit a Quote"</string>
    <string name="quote_hint">Enter quote</string>
    <string name="movie_hint">Enter movie</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="clear">Clear</string>
    <string name="dialogDeleteTitle">Confirm delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
    <string name="delete">Delete</string>
    <string name="get_favorite_movie">Get Favorite Movie</string>
    <string name="get_favorite_quote">Get Favorite Quote</string>
    <string name="get_all_quotes">Get All Quotes</string>
    <string-array name="settings_types">
        <item>Sound</item>
        <item>Search</item>
        <item>General</item>
    </string-array>
</resources>
