<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.moviequotes.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/clear"
        android:orderInCategory="90"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_increase_size"
        android:title="@string/increase_font_size"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/arrow_up_float"/>
    <item
        android:id="@+id/action_decrease_size"
        android:title="@string/decrease_font_size"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/arrow_down_float"/>
    <item
        android:id="@+id/action_get_movie"
        android:title="@string/get_favorite_movie"
        android:orderInCategory="10"/>
    <item
        android:id="@+id/action_get_quote"
        android:title="@string/get_favorite_quote"
        android:orderInCategory="20"/>
    <item
        android:id="@+id/action_get_all_quotes"
        android:title="@string/get_all_quotes"
        android:orderInCategory="30"/>
</menu>
